--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "tsc-watch --onSuccess \"node dist\""
   },
   "repository": {
     "type": "git",
@@ -18,8 +18,15 @@
   },
   "homepage": "https://github.com/HUASKAR7/amp-cleaner#readme",
   "dependencies": {
+    "@ampproject/toolbox-optimizer": "^2.7.4",
+    "amphtml-validator": "^1.0.33",
     "axios": "^0.21.1",
     "cheerio": "^1.0.0-rc.5",
     "express": "^4.17.1"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.9",
+    "tsc-watch": "^4.2.9",
+    "typescript": "^4.1.3"
   }
 }
